WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
191461
[css-flex][css-grid] Percentage sizes on elements inside the subitems should take into account the item's scrollbar size
https://bugs.webkit.org/show_bug.cgi?id=191461
Summary
[css-flex][css-grid] Percentage sizes on elements inside the subitems should ...
Javier Fernandez
Reported
2018-11-09 03:49:28 PST
Created
attachment 354323
[details]
Test case to reproduce the flexibe box issue Check the attached examples, the issue is more noticeable in Grid Layout but it also happens on Flexbox. The problem is that the items have a child with 100% width and height. The items also have margin, padding, border and scrollbar. The scrollbar size is ignored so the items end up being bigger than expected, causing overflow (so you can actually scroll) when it was supposed to not happen.
Attachments
Test case to reproduce the flexibe box issue
(1.49 KB, text/html)
2018-11-09 03:49 PST
,
Javier Fernandez
no flags
Details
Test case to reproduce the grid box issue
(1.46 KB, text/html)
2018-11-09 03:49 PST
,
Javier Fernandez
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2018-11-09 03:49:54 PST
Created
attachment 354324
[details]
Test case to reproduce the grid box issue
Takeru Chuganji
Comment 2
2025-10-19 00:30:30 PDT
I was not able to identify the issue with the attachment, but I found another piece of code that reproduces it possibly related to this.
https://codesandbox.io/p/sandbox/ydlskv
Takeru Chuganji
Comment 3
2025-10-19 06:01:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52626
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug