Account for scrollbar height in grid layout height calculation https://bugs.webkit.org/show_bug.cgi?id=191461

Reviewed by NOBODY (OOPS!).

Fixed an issue where `RenderGrid::availableLogicalHeightForContentBox` did not account for
scrollbar height when an overridingSize was present.

Test: fast/css-grid-layout/grid-item-nested-sizing-scroll.html

* LayoutTests/fast/css-grid-layout/grid-item-nested-sizing-scroll-expected.html: Added.
* LayoutTests/fast/css-grid-layout/grid-item-nested-sizing-scroll.html: Added.
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::availableLogicalHeightForContentBox const):